Fix button color to be consistent on mobile, and add border for current dough

--- a/style.css
+++ b/style.css
@@ -58,20 +58,23 @@ body, h1, h2, h3, h4, h5, h6, .doughbutton {
     font-weight: bold;
     font-size: 24px;
     transition-duration: 0.2s;
+    border: 1px solid bisque;
 }
 
 .doughcurrent {
-    background-color: white;
+    background-color: khaki;
+    border: 1px solid black;
 }
 
 .doughbutton:hover {
     background-color:khaki;
-    /* color: lightcoral; */
+    border: 1px solid bisque;
 }
 
 .doughbutton:active {
     background-color: white;
     /* color: lightcoral; */
+    border: 1px solid bisque;
 }
 
 .total-cont {
